scss/style.scss
@import "misc/colors";
@import "misc/mixins";
@import "misc/ionic-overrides";

// General
* {
  font-family: "Open Sans Hebrew", sans-serif !important;
  font-weight: 300;
}

.content-section {
  margin: 4px 18px
}

.view-container .pane {
  @include RadialGradient;
  &.has-tabs {
    bottom: 0;
  }
}

.scroll-bar-indicator {
  display: none;
}

.popover {
  &.popover-4-items {
    height: 216px;
  }
  &.popover-5-items {
    height: 266px;
  }
  &.popover-6-items {
    height: 316px;
  }
  &.popover-7-items {
    height: 376px;
  }
  &.popover-8-items {
    height: 426px;
  }
  &.popover-9-items {
    height: 476px;
  }
  &.popover-10-items {
    height: 526px;
  }
}

.popup-body {
  overflow: visible;
  select {
    width: 100%;
    margin: 10px 0;
  }
}

strong {
  color: $dark_gray2;
  font-style: italic;
}

textarea {
  resize: none;
  background-color: transparent !important;
  overflow: hidden;
  overflow-y: auto;
}

select, textarea, input[type="text"] {
  font-size: 15px;
  color: $gray2 !important;
  font-weight: 300;
}
select {
  color: inherit;
}

.post-question {
  font-size: 19px;
  line-height: 27px;
  margin: 0 0 1px 0;
  padding-top: 5px;
  font-weight: 300;
}

.post-comment-main {
  border-bottom: 1px solid #EEE;
  .item {
    background: transparent;
  }
  .post-comment {
    overflow: visible;
    p {
      font-size: 17px;
      line-height: 21px;
      font-weight: 300;
      &:first-child {
        margin-top: 0;
      }
    }
    img {
      margin: 15px auto 0 auto;
      border-radius: 2px;
    }
  }
}

.date {
  color: $gray2;
}
.bar .date {
  float: right;
}

.post-img {
  margin: 0 auto;
  display: block;
  max-width: 100%;
}

.spinner-wrapper {
  padding: 25px 0 0 0;
  text-align: center;
}

.bold {
  font-weight: bold;
}

.red {
  color: $red !important;
}

.highlight {
  -moz-transition: background-color 2s;
  -webkit-transition: background-color 2s;
  -o-transition: background-color 2s;
  transition: background-color 2s;
  &.highlight-new {
    background-color: $light_yellow;
  }
}

.image-loader-container {
  text-align: center;
}

.spinner svg {
  stroke: $blue;
  fill: $blue;
}

.m-20 {
  margin: 20px 0 !important;
}

// Animations
.fade-in {
  transition: 0.5s linear all;
  opacity: 1;
  &.ng-hide {
    opacity: 0;
  }
}

// Header
.bar-header {
  h1.title {
    font-weight: 300;
    text-align: left;
    .icon {
      margin: 0;
      padding: 0 12px 0 5px;
    }
    .back-btn {
      float: right;
      min-width: 50px;
      text-align: center;
    }
    .date {
      font-size: 14px;
    }
  }
  h1.title:not(.no-logo) {
    background: url(../img/logo.png) 0 center no-repeat;
    background-size: 131px 21px;
  }
}

// List
.list.list-simple {
  .item {
    background: transparent;
    border-color: $light_gray3;
    white-space: normal;
    &.item:last-child {
      border: 0;
    }
  }
}

// On-boarding
#login-page,
#on-boarding-page {
  background: #BEBEBE !important;
  .slider {
    height: 100%;
  }
  img {
    width: 100%;
    max-height: 101%;
    margin: 0 auto;
    display: block;
    top: -1px;
    position: relative;
  }
}

// Contact page
#contact-page {

}

